force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>Small edit made on 2020_03_06 16:29 in Setup on DEV007</description>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active (A)</fullName>
            </value>
            <value>
                <fullName>Inactive/Vacation (I)</fullName>
            </value>
            <value>
                <fullName>Terminated (T)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>