force-app/main/default/objects/Account/fields/Active_Subscriptions__c.field-meta.xml
<CustomField>
        <fullName>Active_Subscriptions__c</fullName>
        <label>Active Subscriptions</label>
        <summaryFilterItems>
            <field>Subscription__c.subscription_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription__c.subscription_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </CustomField>