force-app/main/default/objects/Account/fields/Clean_Suite_Personator_Result__c.field-meta.xml
<CustomField>
        <fullName>Clean_Suite_Personator_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clean Suite Personator Result</label>
        <referenceTo>MDPERSONATOR__MD_personatorResult__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </CustomField>