force-app/main/default/objects/Account/fields/Disolved_Date__c.field-meta.xml
<CustomField>
        <fullName>Disolved_Date__c</fullName>
        <label>Disolved Date</label>
        <type>Date</type>
    </CustomField>