force-app/main/default/objects/Account/fields/Established_Date__c.field-meta.xml
<CustomField>
        <fullName>Established_Date__c</fullName>
        <label>Established Date</label>
        <type>Date</type>
    </CustomField>