force-app/main/default/objects/Account/fields/Melissa_Data_Address_Result_Code__c.field-meta.xml
<CustomField>
        <fullName>Melissa_Data_Address_Result_Code__c</fullName>
        <label>Melissa Data Address Result Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>