force-app/main/default/objects/Account/fields/Recurly_Link__c.field-meta.xml
<CustomField>
        <fullName>Recurly_Link__c</fullName>
        <label>Recurly Link</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>