force-app/main/default/objects/Account/fields/recurly_v2__Average_Last_3_Invoices__c.field-meta.xml
<CustomField>
        <fullName>recurly_v2__Average_Last_3_Invoices__c</fullName>
        <label>Recurly Average Last 3 Invoices</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>