force-app/main/default/objects/Account/fields/recurly_v2__Past_Due_Recurly_Invoice__c.field-meta.xml
<CustomField>
        <fullName>recurly_v2__Past_Due_Recurly_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurly Past Due Invoice</label>
        <type>Checkbox</type>
    </CustomField>