force-app/main/default/objects/Account/fields/recurly_v2__Recurly_Active_Subscriber__c.field-meta.xml
<CustomField>
        <fullName>recurly_v2__Recurly_Active_Subscriber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurly Active Subscriber</label>
        <type>Checkbox</type>
    </CustomField>