force-app/main/default/objects/Account/fields/recurly_v2__Recurly_In_Trial__c.field-meta.xml
<CustomField>
        <fullName>recurly_v2__Recurly_In_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurly In Trial</label>
        <type>Checkbox</type>
    </CustomField>