force-app/main/default/objects/Account/fields/recurly_v2__Recurly_Most_Recent_Invoice_Amount__c.field-meta.xml
<CustomField>
        <fullName>recurly_v2__Recurly_Most_Recent_Invoice_Amount__c</fullName>
        <label>Recurly Most Recent Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>