force-app/main/default/objects/Account/fields/recurly_v2__Recurly_Plan_Name__c.field-meta.xml
<CustomField>
        <fullName>recurly_v2__Recurly_Plan_Name__c</fullName>
        <label>Recurly Plan Name</label>
        <length>150</length>
        <type>Text</type>
    </CustomField>