force-app/main/default/objects/Account/fields/recurly_v2__Total_Invoices_Sum__c.field-meta.xml
<CustomField>
        <fullName>recurly_v2__Total_Invoices_Sum__c</fullName>
        <label>Recurly Total Invoices Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>