force-app/main/default/objects/Account/fields/Route_Number__c.field-meta.xml
<CustomField>
        <fullName>Route_Number__c</fullName>
        <description>This field stores the route number for this household</description>
        <label>Route Number</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>