force-app/main/default/objects/Account/fields/Sales_Tax_Permit__c.field-meta.xml
<CustomField>
        <fullName>Sales_Tax_Permit__c</fullName>
        <label>Sales Tax Permit</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>