force-app/main/default/objects/Account/fields/Sales_Tax_Permit_Date__c.field-meta.xml
<CustomField>
        <fullName>Sales_Tax_Permit_Date__c</fullName>
        <label>Sales Tax Permit Date</label>
        <type>Date</type>
    </CustomField>