force-app/main/default/objects/Account/fields/Store_Number__c.field-meta.xml
<CustomField>
        <fullName>Store_Number__c</fullName>
        <label>Store Number</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>