force-app/main/default/objects/Account/fields/Tax_Exempt__c.field-meta.xml
<CustomField>
        <fullName>Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Exempt</label>
        <type>Checkbox</type>
    </CustomField>