force-app/main/default/objects/Account/recordTypes/Business_Non_Subscriber.recordType-meta.xml
<RecordType>
        <fullName>Business_Non_Subscriber</fullName>
        <active>true</active>
        <description>Business Non-Subscriber Record Type</description>
        <label>Business Non-Subscriber</label>
    </RecordType>