force-app/main/default/objects/Account/recordTypes/Business_Subscriber.recordType-meta.xml
<RecordType>
        <fullName>Business_Subscriber</fullName>
        <active>true</active>
        <description>Business Subscriber or Prospect Record Type</description>
        <label>Business Subscriber</label>
    </RecordType>