force-app/main/default/objects/Account/recordTypes/Household.recordType-meta.xml
<RecordType>
        <fullName>Household</fullName>
        <active>true</active>
        <description>Household Subscriber or Prospect Record Type</description>
        <label>Household</label>
    </RecordType>