force-app/main/default/objects/Account/listViews/Partner_Accounts.listView-meta.xml
<ListView>
        <fullName>Partner_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>household</value>
        </filters>
        <label>Partner Accounts</label>
    </ListView>